brat/test/golden/error/bad_swap.brat
swap(X :: *, Y :: *, X, Y) -> Y, X
swap(_, _, x, y) = x, y
